tests/pass/01_math.lang
целое а = 10;
целое б = 5;
целое результат = а + б;
