tests/fail/01_type_mismatch.lang
целое а = 10;
вещ б = 3.14;
целое в = а + б;
